--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <title>Lifecare Hospital</title>
     <!-- css -->
     <link rel = "stylesheet" href = "main.css">
+
+    </html>
 </head>
 <body>
 
+    <!-- javascript -->
+    <script src = "./index.js"></script>
 
     <!-- header part-->
     <header class = "header bg-blue">
@@ -191,7 +195,3 @@
         <!-- end of contact part -->
     </main>
 
-    <!-- custom js -->
-    <script src = "js/script.js"></script>
-</body>
-</html>
