--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <script src = "./index.js"></script>
 
     <!-- header part-->
-    <header class = "header bg-blue">
-        <nav class = "navbar bg-blue">
+    <header class = "header bg-green">
+        <nav class = "navbar bg-green">
             <div class = "container flex">
                 <a href = "https://codelancashire.tech/" class = "navbar-brand">
                     <img src = "images/hospital-logo.png" alt = "site logo">
@@ -72,7 +72,7 @@
                     <p class = "text text-md">We have the best medical team in the whole of Northwest England</p>
                     <div class = "btn-group">
                         <a href = "https://codelancashire.tech/" class = "btn btn-white">Learn More</a>
-                        <a href = "https://codelancashire.tech/" class = "btn btn-light-blue">Sign In</a>
+                        <a href = "https://codelancashire.tech/" class = "btn btn-light-green">Sign In</a>
                     </div>
                 </div>
                 <div class = "header-inner-right">
@@ -113,7 +113,7 @@
                 <small class = "text text-sm">-William Mayo</small>
             </div>
         </section>
-        <!-- end of banner one -->
+        <!-- end of banner -->
 
         <!-- services part -->
         <section id = "services" class = "services py">
@@ -170,10 +170,10 @@
                 <div class = "contact-left">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2358.403293741801!2d-2.71053378414574!3d53.76450748006878!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487b727a73870a81%3A0x50eb2eeb2e8bd2e0!2sUniversity%20of%20Central%20Lancashire!5e0!3m2!1sen!2suk!4v1690408049716!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
-                <div class = "contact-right text-white text-center bg-blue">
+                <div class = "contact-right text-white text-center bg-green">
                     <div class = "contact-head">
                         <h3 class = "lead">Contact Us</h3>
-                        <p class = "text text-md">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga.</p>
+                        <p class = "text text-md">For all your enquiries, please drop us a message</p>
                     </div>
                     <form>
                         <div class = "form-element">
